--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Mar 18 21:59:39 PDT 2022
-sdk.dir=C\:\\Users\\thien\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Rafael\\AppData\\Local\\Android\\Sdk
