--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        main {
+            assets {
+                srcDirs 'src\\main\\assets'
+            }
+            java {
+                srcDirs 'src\\main\\java', 'src\\main\\java\\2', 'src\\main\\java\\DB Classes', 'src\\main\\java\\com\\example\\readgrow\\DB Classes'
+            }
+        }
+    }
 }
 
 dependencies {
