--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 18 21:59:39 PDT 2022
-sdk.dir=C\:\\Users\\thien\\AppData\\Local\\Android\\Sdk
+#Thu Mar 31 14:14:23 PDT 2022
+sdk.dir=C\:\\SDK
