--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReadGrow">
         <activity
+            android:name=".ReadingTracker"
+            android:exported="false" />
+        <activity
             android:name=".HomePage"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".UpdateBook0"
             android:exported="false" />
@@ -21,7 +22,6 @@
             android:name=".RequestBookActivity"
             android:exported="false" />
         <activity
-
             android:name=".FindBookActivity"
             android:exported="false" />
         <activity
@@ -31,7 +31,6 @@
             android:name=".AddBookPage"
             android:exported="false" />
         <activity
-
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -39,7 +38,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".SignUpActivity2"
