--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Mar 31 14:14:23 PDT 2022
-sdk.dir=C\:\\SDK
+sdk.dir=C\:\\Users\\Rafael\\AppData\\Local\\Android\\Sdk
+
