Message and signout button added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReadGrow">
         <activity
+            android:name=".viewMessgae"
+            android:exported="false" />
+        <activity
             android:name=".SendMessage"
             android:exported="false" />
         <activity
