Update profile + icons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ReadGrow">
         <activity
-            android:name=".viewMessgae"
+            android:name=".Profile"
+            android:exported="false" />
+        <activity
+            android:name=".AdminHomePage"
             android:exported="false" />
         <activity
             android:name=".SendMessage"
